--- a/techcon_website/about.html
+++ b/techcon_website/about.html
@@ -8,7 +8,7 @@
 <body>
 
     <header>
-        <h1>TechCon 2024</h1>
+        <h1>About TechCon 2024</h1>
         <nav>
             <ul>
                 <li><a href="about.html">About</a></li>
