--- a/techcon_website/about.html
+++ b/techcon_website/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TechCon 2024 - Home</title>
+    <title>TechCon 2024 - About</title>
 </head>
 <body>
 
@@ -11,7 +11,7 @@
         <h1>About TechCon 2024</h1>
         <nav>
             <ul>
-                <li><a href="about.html">About</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="schedule.html">Schedule</a></li>
                 <li><a href="register.html">Register</a></li>
                 <li><a href="contact.html">Contact</a></li>
@@ -20,24 +20,80 @@
     </header>
 
     <main>
-        <section>
-            <h2>Welcome to TechCon 2024</h2>
+        <article>
+            <h2>History of TechCon</h2>
             <p>
-                Join us at TechCon 2024, the premier event for tech enthusiasts, developers, and industry leaders!
-                Explore the latest innovations, attend insightful workshops, and network with experts from around the globe.
-                Whether you're looking to advance your skills, discover new trends, or connect with peers, TechCon 2024
-                offers an unparalleled experience for everyone passionate about technology.
+                TechCon began in 2010 as a small gathering of local tech enthusiasts in a university auditorium.
+                Its initial goal was to create a platform for sharing knowledge and fostering innovation within the burgeoning local tech scene.
+                Over the years, it rapidly grew in popularity, attracting speakers and attendees from across the nation, and eventually, the globe.
+                By 2015, TechCon had established itself as a leading annual event, known for its cutting-edge discussions and vibrant community.
             </p>
+            <img src="techcon_history_2010.jpg" alt="Early TechCon conference in 2010 with a small audience" width="400">
+            <p>
+                In 2020, even amidst global challenges, TechCon successfully transitioned to a hybrid format, expanding its reach
+                and demonstrating resilience. This adaptability has cemented its reputation as a forward-thinking conference
+                that embraces new technologies not just in content, but in delivery.
+            </p>
+            <img src="techcon_history_2020_hybrid.jpg" alt="TechCon 2020 hybrid event showing both in-person and online attendees" width="400">
+        </article>
 
-            <h3>Promotional Video</h3>
-            <video controls width="640" height="360" aria-describedby="video-description">
-                <source src="techcon_promo.mp4" type="video/mp4">
-                <source src="techcon_promo.webm" type="video/webm">
-                <track kind="captions" src="techcon_promo_captions_en.vtt" srclang="en" label="English Captions">
-                <p id="video-description">A promotional video for TechCon 2024, showcasing past highlights and what to expect from this year's conference. It features various speakers and attendees engaging in discussions and workshops.</p>
-                Your browser does not support the video tag.
-            </video>
-        </section>
+        <article>
+            <h2>Our Mission</h2>
+            <p>
+                At TechCon, our mission is to empower the global tech community by providing a dynamic forum for learning, networking, and collaboration.
+                We strive to:
+            </p>
+            <ul>
+                <li>
+                    <img src="icon_innovation.png" alt="Lightbulb icon representing innovation" width="30" height="30">
+                    **Ignite Innovation:** Present groundbreaking research and technologies that inspire future advancements.
+                </li>
+                <li>
+                    <img src="icon_knowledge.png" alt="Book icon representing knowledge" width="30" height="30">
+                    **Share Knowledge:** Facilitate the exchange of ideas and best practices among professionals and aspiring talent.
+                </li>
+                <li>
+                    <img src="icon_community.png" alt="People icon representing community" width="30" height="30">
+                    **Build Community:** Create connections and foster a supportive environment for tech enthusiasts worldwide.
+                </li>
+            </ul>
+            <p>
+                We believe that by bringing diverse minds together, we can collectively push the boundaries of what's possible in technology.
+            </p>
+        </article>
+
+        <article>
+            <h2>Notable Past Speakers</h2>
+            <p>TechCon has been honored to host some of the brightest minds in the tech industry. Here are a few notable past speakers:</p>
+
+            <section>
+                <h3>Dr. Anya Sharma</h3>
+                <img src="speaker_anya_sharma.jpg" alt="Portrait of Dr. Anya Sharma" width="150">
+                <p>
+                    Dr. Anya Sharma, a pioneer in quantum AI, keynoted TechCon 2017, discussing the ethical implications of advanced artificial intelligence.
+                    Her work at QuantumMind Inc. has been instrumental in developing secure and transparent AI systems.
+                </p>
+            </section>
+
+            <section>
+                <h3>Mr. Ben Carter</h3>
+                <img src="speaker_ben_carter.jpg" alt="Portrait of Mr. Ben Carter" width="150">
+                <p>
+                    As the founder of "GreenTech Solutions," Mr. Ben Carter captivated the audience at TechCon 2019 with his vision
+                    for sustainable technology and renewable energy integration in smart cities.
+                </p>
+            </section>
+
+            <section>
+                <h3>Ms. Chloe Davis</h3>
+                <img src="speaker_chloe_davis.jpg" alt="Portrait of Ms. Chloe Davis" width="150">
+                <p>
+                    Ms. Chloe Davis, a renowned expert in cybersecurity, presented at TechCon 2021 on the evolving landscape of
+                    digital threats and the future of secure online environments. She is the author of "Digital Fortress."
+                </p>
+            </section>
+
+        </article>
     </main>
 
     <footer>
