--- a/techcon_website/register.html
+++ b/techcon_website/register.html
@@ -44,4 +44,19 @@
             </div>
 
             <div>
-                <input type="checkbox" id="terms" name="terms"
+                <input type="checkbox" id="terms" name="terms" required>
+                <label for="terms">I agree to the <a href="terms.html" target="_blank">terms and conditions</a></label>
+            </div>
+
+            <div>
+                <button type="submit">Register Now</button>
+            </div>
+        </form>
+    </main>
+
+    <footer>
+        <p>copyright &copy; 2024 TechCon. All rights reserved.</p>
+    </footer>
+
+</body>
+</html>
